[gd_scene load_steps=4 format=3 uid="uid://b7y1pcrm32hly"]

[ext_resource type="Script" uid="uid://cefj4mge88uff" path="res://mobs/the_shade/the_shade.gd" id="1_7vchk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7vchk"]
radius = 0.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_52n7y"]
radius = 0.4

[node name="TheShade" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 9
script = ExtResource("1_7vchk")

[node name="Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7vchk")

[node name="Bean" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00617, 0)
mesh = SubResource("CapsuleMesh_52n7y")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
unique_name_in_owner = true
path_desired_distance = 0.4
path_max_distance = 100.01
avoidance_enabled = true
radius = 0.4
debug_enabled = true

[node name="EyeRaycast" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.129827, 1.59947, 0)
collision_mask = 11
collide_with_areas = true

[node name="FrontRaycast" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.599, -1.676)
collision_mask = 11
collide_with_areas = true
